# libNeuroML

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README  README.md  example.py  how_to_contribute.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  to_do.org
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python-publish.yml  regenerate.yml
doc/: Makefile  api.rst  bibliography.rst  component-list.json  conf.py  coreclasses.rst  examples.txt  how_to_contribute.rst  how_to_contribute.txt  implementation_of_bindings.txt  index.rst  index.txt  install.rst  install.txt  introduction.rst  introduction.txt  loaders.rst  make.bat  meeting_june_2012.rst  meeting_june_2012.txt  modules.rst  neuroml.nml.txt  neuroml.test.rst  neuroml.txt  neuroml.v2.txt  nodes_segments_sections.txt  note_on_arraymorph.rst  note_on_arraymorph.txt  refs.bib  requirements.txt  scope_of_project.txt  tools.txt  utils.rst  writers.rst
doc/devdocs/: how_to_contribute.rst  index.rst  meeting_june_2012.rst  nodes_segments_sections.rst  regenerate_docs.rst
doc/helpers/: nml-core-docs.py
doc/userdocs/: Cells_list.rst  Channels_list.rst  Inputs_list.rst  PyNN_list.rst  (+17 more)
examples/: build_3D_network.py  morphology_generation.py
hdf5Examples/: README  README.md  neuroConstruct_NetworkMLv1.8.1.h5
hhExample/: README  hh_MOOSE.py  hh_MORPHFORGE.py  hh_NEUROML2.py  hh_NEURON.py  hh_TARGET.py
neuroml/: __init__.py  __version__.py  arraymorph.py  arraymorph_benchmarks.py  arraymorph_load_time_benchmark.py  build_time_validation.py  components.py  example.py  kinetics.py  l2validators.py  loaders.py  lxml.py  lxml_utils.py  morphology.py  neuro_lex_ids.py  opmorphology.py  optimized_morphology.py  predefined.py  test.py  types.py  utils.py  writers.py
notebooks/: CellMorphology.ipynb  HDF5Serialisation.ipynb
testFiles/: CA1.nml  Kdr.nml  Leak.nml  NML2_AbstractCells.nml  NML2_AbstractCells_2.nml  NML2_FloatingDend.nml  NML2_FullCell.nml  Purk2M9s.nml
(+194 files in other folders)
