[metadata]
name = libNeuroML
version = 0.5.7
author_email = vellamike@gmail.com, p.gleeson@gmail.com
author = libNeuroML authors and contributors
description = A Python library for working with NeuroML descriptions of neuronal models
long_description = file: README.md
long_description_content_type=text/markdown
url = http://libneuroml.readthedocs.org/en/latest/
license = BSD-2-Clause
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering

[options]
install_requires =
    lxml
    six
    networkx
    numpy
    tables>=3.3.0
    typing; python_version<"3.5"
    natsort

packages = find:

[options.packages.find]
where = .
include = neuroml*
exclude = neuroml.test*

[options.package_data]
neuroml.nml =
    *.xsd


[options.extras_require]
test =
    pytest

dev =
    wheel
    generateds >= 2.20a; python_version >= '3.0'
    cython
    numpy
    networkx
    flake8
    pytest
    black ; python_version >= '3.0'
    natsort

doc =
    sphinxcontrib-bibtex
    pydata-sphinx-theme
    natsort

full =
    libNeuroML[test]
    libNeuroML[dev]
    libNeuroML[doc]

[flake8]
# ignore:
# spacing around operators, comment blocks, in argument lists
# lines too long
ignore = E501,E502,F403,F405,E231,E228,E225,E226,E265,E261
exclude =
    neuroml/nml/nml.py,
    neuroml/nml/helper_methods.py,
    doc,
    build

[mypy]
ignore_missing_imports = True
follow_imports = silent
exclude = (nml\.py|doc/|build/|helper_methods\.py|generateds_config\.py|examples/)
